--- a/src/main/webapp/frontend/public/index.html
+++ b/src/main/webapp/frontend/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <meta name="referrer" content ="always"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="referrer" content ="always"/>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+    <!-- 마커실행 -->
+    <link rel="stylesheet" href="css/zoom-marker.css">
+    <link rel="stylesheet" href="css/easy-loading.css">
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/hammer.min.js"></script>
+    <script src="js/zoom-marker.min.js"></script>
+    <script src="js/easy-loading.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
